Bug 106650 - [C++23 (defect against C++11+)] P2280 - Using unknown references in constant expressions
Summary: [C++23 (defect against C++11+)] P2280 - Using unknown references in constant ...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: unknown
: P3 normal
Target Milestone: 14.0
Assignee: Marek Polacek
URL:
Keywords:
: 115772 (view as bug list)
Depends on:
Blocks: c++23-core
  Show dependency treegraph
 
Reported: 2022-08-16 17:08 UTC by Marek Polacek
Modified: 2026-02-27 05:46 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2022-12-09 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marek Polacek 2022-08-16 17:08:01 UTC
See <https://wg21.link/p2280>.
Comment 1 Drea Pinski 2022-12-09 15:27:31 UTC
.
Comment 2 Marek Polacek 2023-11-16 22:36:17 UTC
With just

--- a/gcc/cp/constexpr.cc
+++ b/gcc/cp/constexpr.cc
@@ -7378,6 +7378,8 @@ cxx_eval_constant_expression (const constexpr_ctx *ctx, tree t,
      r = build_constructor (TREE_TYPE (t), NULL);
      TREE_CONSTANT (r) = true;
    }
+      else if (TYPE_REF_P (TREE_TYPE (t)))
+   /* P2280 */;
       else
    {
      if (!ctx->quiet)

the test from P2280 behaves as expected:

$ xg++ -c z.C -std=c++20
z.C: In function ‘void splash(Swim&)’:
z.C:35:33: error: non-constant condition for static assertion
   35 |   static_assert(pswam->phelps() == 28);         // error: lvalue-to-rvalue conversion on a pointer
      |                 ~~~~~~~~~~~~~~~~^~~~~
z.C:35:17: error: the value of ‘pswam’ is not usable in a constant expression
   35 |   static_assert(pswam->phelps() == 28);         // error: lvalue-to-rvalue conversion on a pointer
      |                 ^~~~~
z.C:34:9: note: ‘pswam’ was not declared ‘constexpr’
   34 |   Swim* pswam = &swam;
      |         ^~~~~
z.C:41:31: error: non-constant condition for static assertion
   41 |   static_assert(swam.lochte() == 12);           // error: invoking virtual function on reference
      |                 ~~~~~~~~~~~~~~^~~~~
z.C:41:28: error: ‘* & swam’ is not a constant expression
   41 |   static_assert(swam.lochte() == 12);           // error: invoking virtual function on reference
      |                 ~~~~~~~~~~~^~
z.C:44:31: error: non-constant condition for static assertion
   44 |   static_assert(swam.coughlin == 12);           // error: lvalue-to-rvalue conversion on an object
      |                 ~~~~~~~~~~~~~~^~~~~
z.C:44:31: error: ‘swam’ is not a constant expression
z.C: At global scope:
z.C:52:36: error: the value of ‘trident’ is not usable in a constant expression
   52 | constexpr auto& gallagher = typeid(trident);    // error: constexpr-unknown dynamic type
      |                                    ^~~~~~~
z.C:49:14: note: ‘trident’ was not initialized with a constant expression
   49 | extern Swim& trident;
      |              ^~~~~~~


It cannot be that easy, can it?
Comment 3 Marek Polacek 2023-11-17 21:47:15 UTC
Patch posted:
https://gcc.gnu.org/pipermail/gcc-patches/2023-November/637101.html
though I'm not sure it's complete.
Comment 4 GCC Commits 2023-11-29 22:10:43 UTC
The trunk branch has been updated by Marek Polacek <mpolacek@gcc.gnu.org>:

https://gcc.gnu.org/g:99d114c15523e0bfe7a89ef1947f82eb5ff0260b

commit r14-5979-g99d114c15523e0bfe7a89ef1947f82eb5ff0260b
Author: Marek Polacek <polacek@redhat.com>
Date:   Fri Nov 17 14:48:44 2023 -0500

    c++: P2280R4, Using unknown refs in constant expr [PR106650]
    
    This patch is an attempt to implement (part of?) P2280, Using unknown
    pointers and references in constant expressions.  (Note that R4 seems to
    only allow References to unknown/Accesses via this, but not Pointers to
    unknown.)
    
    This patch works to the extent that the test case added in [expr.const]
    works as expected, as well as the test in
    <https://www.open-std.org/jtc1/sc22/wg21/docs/papers/2022/p2280r4.html#the-this-pointer>
    
    Most importantly, the proposal makes this compile:
    
      template <typename T, size_t N>
      constexpr auto array_size(T (&)[N]) -> size_t {
          return N;
      }
    
      void check(int const (&param)[3]) {
          constexpr auto s = array_size(param);
          static_assert (s == 3);
      }
    
    and I think it would be a pity not to have it in GCC 14.
    
    What still doesn't work is the test in $3.2:
    
      struct A2 { constexpr int f() { return 0; } };
      struct B2 : virtual A2 {};
      void f2(B2 &b) { constexpr int k = b.f(); }
    
    where we say
    error: '* & b' is not a constant expression
    
    This will be fixed in the future.
    
            PR c++/106650
    
    gcc/cp/ChangeLog:
    
            * constexpr.cc (cxx_eval_constant_expression) <case PARM_DECL>: Allow
            reference to unknown/this as per P2280.
            <case VAR_DECL>: Allow reference to unknown as per P2280.
    
    gcc/testsuite/ChangeLog:
    
            * g++.dg/cpp0x/constexpr-array-ptr6.C: Remove dg-error.
            * g++.dg/cpp0x/constexpr-ref12.C: Likewise.
            * g++.dg/cpp0x/constexpr-ref2.C: Adjust dg-error.
            * g++.dg/cpp0x/noexcept34.C: Remove dg-error.
            * g++.dg/cpp1y/lambda-generic-const10.C: Likewise.
            * g++.dg/cpp0x/constexpr-ref13.C: New test.
            * g++.dg/cpp1z/constexpr-ref1.C: New test.
            * g++.dg/cpp1z/constexpr-ref2.C: New test.
            * g++.dg/cpp2a/constexpr-ref1.C: New test.
Comment 5 Marek Polacek 2023-11-29 22:24:30 UTC
Implemented in GCC 14.
Comment 6 Drea Pinski 2024-07-03 14:37:49 UTC
*** Bug 115772 has been marked as a duplicate of this bug. ***